[package]
name = "flat-token"
version = "0.0.1"
edition = "2018"

description = """
Implements flat tokens produced from token streams through a "flatten"
operation. Useful for proc macros that use token trees.
"""
authors = ["Eduard-Mihai Burtescu <eddyb@lyken.rs>", "Piotr Czarnecki <pioczarn@gmail.com>"]
repository = "https://github.com/pczarn/flat-token/"
license = "MIT/Apache-2.0"

[lib]
name = "flat_token"

[dependencies]
proc-macro2 = "1.0.6"
